--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,7 @@
 	<div class = "form-group">
 		<input class = "form-control" type="text" id="username" placeholder = "Username">
 		<input class = "form-control" type="text" id="password" placeholder = "Password">
+		<input class = "form-control" type="text" id="email" placeholder = "Email">
     	<input class = "form-control btn-primary" type = "submit" id = "login" value="Log In">
     	<input class = "form-control btn-primary" type = "submit" id = "signup" value="Sign Up">
     </div>
