--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
     	<input class = "form-control btn-primary" type = "submit" id = "login" value="Log In">
     </div>
 </form>
-<button class = "form-control btn-primary" id = "signup" value="Sign Up">
+<a href="/signup">Sign Up</a>
 <div id = "groups">
 </div>
 </body>
