--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,5 +16,6 @@
 <body>
 <h1>GROUP ALARM</h1>
 <h2>Wake up together</h2>
+<button id='group_creation' class = "form-control btn-primary">Create a Group</button>
 <a href="/logout">Logout</a>
 </body>
