adding people to groups

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,6 +16,9 @@
 <body>
 <h1>GROUP ALARM</h1>
 <h2>Wake up together</h2>
+<input id = "group_name"></input>
+<input type="time" id = "group_alarm">
+<input id = "group_interval">
 <button id='group_creation' class = "form-control btn-primary">Create a Group</button>
 <a href="/logout">Logout</a>
 </body>
