--- a/views/createGroup.ejs
+++ b/views/createGroup.ejs
@@ -2,7 +2,7 @@
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script type="text/javascript" src = "javascripts/createGroup.js"></script>
+	<script type="text/javascript" src = "../javascripts/createGroup.js"></script>
 	<style type="text/css">
 		form {
 			width: 30%;
